--- a/TakeBackChatter/FeedList.xib
+++ b/TakeBackChatter/FeedList.xib
@@ -311,7 +311,7 @@
 							</object>
 						</object>
 					</dictionary>
-					<array class="NSMutableArray" key="NSToolbarIBAllowedItems">
+					<array key="NSToolbarIBAllowedItems">
 						<reference ref="948813938"/>
 						<reference ref="957730252"/>
 						<reference ref="157194251"/>
@@ -347,13 +347,14 @@
 							<int key="NSvFlags">18</int>
 							<string key="NSFrame">{{0, -1}, {458, 707}}</string>
 							<reference key="NSSuperview" ref="784581011"/>
-							<reference key="NSNextKeyView" ref="614875058"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="555206616"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<array class="NSMutableArray" key="NSTabViewItems">
 								<object class="NSTabViewItem" id="418211206">
 									<string key="NSIdentifier">1</string>
 									<object class="NSView" key="NSView" id="614875058">
-										<reference key="NSNextResponder" ref="921970418"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<array class="NSMutableArray" key="NSSubviews">
 											<object class="NSScrollView" id="375869219">
@@ -423,7 +424,7 @@
 												<int key="NSvFlags">289</int>
 												<string key="NSFrame">{{232, 13}, {212, 17}}</string>
 												<reference key="NSSuperview" ref="614875058"/>
-												<reference key="NSNextKeyView"/>
+												<reference key="NSNextKeyView" ref="921970418"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="679483917">
 													<int key="NSCellFlags">68288064</int>
@@ -590,7 +591,6 @@
 											</object>
 										</array>
 										<string key="NSFrameSize">{458, 707}</string>
-										<reference key="NSSuperview" ref="921970418"/>
 										<reference key="NSNextKeyView" ref="154246105"/>
 										<string key="NSReuseIdentifierKey">_NS:11</string>
 									</object>
@@ -604,7 +604,6 @@
 										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<string key="NSFrameSize">{458, 707}</string>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:28</string>
 									</object>
 									<string key="NSLabel">Groups</string>
@@ -614,12 +613,12 @@
 								<object class="NSTabViewItem" id="206135383">
 									<string key="NSIdentifier">2</string>
 									<object class="NSView" key="NSView" id="555206616">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="921970418"/>
 										<int key="NSvFlags">256</int>
 										<array class="NSMutableArray" key="NSSubviews">
 											<object class="NSScrollView" id="213988319">
 												<reference key="NSNextResponder" ref="555206616"/>
-												<int key="NSvFlags">268</int>
+												<int key="NSvFlags">274</int>
 												<array class="NSMutableArray" key="NSSubviews">
 													<object class="NSClipView" id="715373699">
 														<reference key="NSNextResponder" ref="213988319"/>
@@ -627,15 +626,17 @@
 														<array class="NSMutableArray" key="NSSubviews">
 															<object class="NSView" id="1011709334">
 																<reference key="NSNextResponder" ref="715373699"/>
-																<int key="NSvFlags">274</int>
+																<int key="NSvFlags">298</int>
 																<string key="NSFrameSize">{441, 643}</string>
 																<reference key="NSSuperview" ref="715373699"/>
+																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="744693614"/>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 															</object>
 														</array>
 														<string key="NSFrame">{{1, 1}, {441, 643}}</string>
 														<reference key="NSSuperview" ref="213988319"/>
+														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="1011709334"/>
 														<string key="NSReuseIdentifierKey">_NS:11</string>
 														<reference key="NSDocView" ref="1011709334"/>
@@ -647,6 +648,7 @@
 														<int key="NSvFlags">256</int>
 														<string key="NSFrame">{{442, 1}, {15, 643}}</string>
 														<reference key="NSSuperview" ref="213988319"/>
+														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="31225660"/>
 														<string key="NSReuseIdentifierKey">_NS:15</string>
 														<reference key="NSTarget" ref="213988319"/>
@@ -659,7 +661,8 @@
 														<int key="NSvFlags">256</int>
 														<string key="NSFrame">{{1, 644}, {441, 15}}</string>
 														<reference key="NSSuperview" ref="213988319"/>
-														<reference key="NSNextKeyView"/>
+														<reference key="NSWindow"/>
+														<reference key="NSNextKeyView" ref="921970418"/>
 														<string key="NSReuseIdentifierKey">_NS:26</string>
 														<int key="NSsFlags">1</int>
 														<reference key="NSTarget" ref="213988319"/>
@@ -669,6 +672,7 @@
 												</array>
 												<string key="NSFrame">{{0, 38}, {458, 660}}</string>
 												<reference key="NSSuperview" ref="555206616"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="715373699"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133170</int>
@@ -678,6 +682,8 @@
 											</object>
 										</array>
 										<string key="NSFrameSize">{458, 707}</string>
+										<reference key="NSSuperview" ref="921970418"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="213988319"/>
 									</object>
 									<string key="NSLabel">People</string>
@@ -685,18 +691,19 @@
 									<reference key="NSTabView" ref="921970418"/>
 								</object>
 							</array>
-							<reference key="NSSelectedTabViewItem" ref="418211206"/>
+							<reference key="NSSelectedTabViewItem" ref="206135383"/>
 							<reference key="NSFont" ref="199615227"/>
 							<int key="NSTvFlags">6</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<array class="NSMutableArray" key="NSSubviews">
-								<reference ref="614875058"/>
+								<reference ref="555206616"/>
 							</array>
 						</object>
 					</array>
 					<string key="NSFrameSize">{458, 696}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="921970418"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1578}}</string>
@@ -716,6 +723,9 @@
 				<bool key="NSSelectsInsertedObjects">YES</bool>
 				<bool key="NSFilterRestrictsInsertion">YES</bool>
 				<bool key="NSClearsFilterPredicateOnInsertion">YES</bool>
+			</object>
+			<object class="NSCustomObject" id="590082261">
+				<string key="NSClassName">PeopleViewController</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -783,6 +793,14 @@
 						<reference key="destination" ref="355248523"/>
 					</object>
 					<int key="connectionID">106</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">peopleViewController</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="590082261"/>
+					</object>
+					<int key="connectionID">108</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -926,6 +944,14 @@
 						<reference key="destination" ref="439967482"/>
 					</object>
 					<int key="connectionID">100</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">collectionView</string>
+						<reference key="source" ref="590082261"/>
+						<reference key="destination" ref="1011709334"/>
+					</object>
+					<int key="connectionID">109</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1254,6 +1280,11 @@
 						<reference key="object" ref="744693614"/>
 						<reference key="parent" ref="213988319"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">107</int>
+						<reference key="object" ref="590082261"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1262,10 +1293,11 @@
 				<string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="101.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="102.CustomClassName">CollectionViewFeed</string>
+				<string key="102.CustomClassName">CollectionViewPeople</string>
 				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="103.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="104.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="107.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1321,9 +1353,154 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">106</int>
+			<int key="maxID">109</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">AMCollectionView</string>
+					<string key="superclassName">NSControl</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">itemPrototype</string>
+						<string key="NS.object.0">AMCollectionViewItem</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">itemPrototype</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">itemPrototype</string>
+							<string key="candidateClassName">AMCollectionViewItem</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/AMCollectionView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">AMCollectionViewItem</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="collectionView">AMCollectionView</string>
+						<string key="view">NSView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="collectionView">
+							<string key="name">collectionView</string>
+							<string key="candidateClassName">AMCollectionView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="view">
+							<string key="name">view</string>
+							<string key="candidateClassName">NSView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/AMCollectionViewItem.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CollectionViewFeed</string>
+					<string key="superclassName">AMCollectionView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CollectionViewFeed.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CollectionViewPeople</string>
+					<string key="superclassName">AMCollectionView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CollectionViewPeople.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FeedViewController</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="createPost:">id</string>
+						<string key="loadNewerRows:">id</string>
+						<string key="loadOlderRows:">id</string>
+						<string key="markSelectedPostsAsJunk:">id</string>
+						<string key="markSelectedPostsAsNotJunk:">id</string>
+						<string key="setFeedListTypeFromSender:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="createPost:">
+							<string key="name">createPost:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="loadNewerRows:">
+							<string key="name">loadNewerRows:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="loadOlderRows:">
+							<string key="name">loadOlderRows:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="markSelectedPostsAsJunk:">
+							<string key="name">markSelectedPostsAsJunk:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="markSelectedPostsAsNotJunk:">
+							<string key="name">markSelectedPostsAsNotJunk:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="setFeedListTypeFromSender:">
+							<string key="name">setFeedListTypeFromSender:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="feedCollectionView">CollectionViewFeed</string>
+						<string key="feedSelectionControl">NSSegmentedControl</string>
+						<string key="peopleViewController">PeopleViewController</string>
+						<string key="window">NSWindow</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="feedCollectionView">
+							<string key="name">feedCollectionView</string>
+							<string key="candidateClassName">CollectionViewFeed</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="feedSelectionControl">
+							<string key="name">feedSelectionControl</string>
+							<string key="candidateClassName">NSSegmentedControl</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="peopleViewController">
+							<string key="name">peopleViewController</string>
+							<string key="candidateClassName">PeopleViewController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="window">
+							<string key="name">window</string>
+							<string key="candidateClassName">NSWindow</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FeedViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PeopleViewController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">collectionView</string>
+						<string key="NS.object.0">CollectionViewPeople</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">collectionView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">collectionView</string>
+							<string key="candidateClassName">CollectionViewPeople</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PeopleViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
